Nurayn template added

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <section class="text-center">
 
         <!--Grid row-->
-        <div class="row wow fadeIn" data-wow-delay="0.3s" style="visibility: visible; animation-name: fadeIn; animation-delay: 0.3s;">
+        <div class="row wow fadeIn mt-4" data-wow-delay="0.3s" style="visibility: visible; animation-name: fadeIn; animation-delay: 0.3s;">
 
           <!--Grid column-->
           <div class="col-md-6 mb-4">
@@ -75,11 +75,6 @@
             <p class="dark-grey-text">
               Built with: <strong>JQuery, Material Design Bootstrap</strong>
             </p>
-            <!-- <a href="https://mdbootstrap.com/docs/jquery/getting-started/download/" class="btn btn-primary btn-md waves-effect waves-light" id="homepage-btn-getstart-jquery" alt="jQuery Getting Started">Getting Started<i class="fas fa-download ml-1"></i></a>
-            <a href="https://mdbootstrap.com/education/bootstrap/" class="btn btn-primary btn-md waves-effect waves-light" id="homepage-btn-tutorial-jquery" alt="jQuery Tutorial">Tutorial</a>
-            <a href="https://mdbootstrap.com/docs/jquery/" class="btn btn-primary btn-md waves-effect waves-light" id="homepage-btn-docs-jquery" alt="jQuery Docs">Docs</a>
-            <a href="https://mdbootstrap.com/products/jquery-ui-kit/" class="btn btn-primary btn-md waves-effect waves-light" id="homepage-btn-pro-jquery" alt="jQuery Pro">Pro<i class="far far fa-gem ml-1"></i></a> -->
-
           </div>
           <!--Grid column-->
 
@@ -101,11 +96,57 @@
             <p class="dark-grey-text">Built with:
               <strong>Angular, Bootstrap</strong>
             </p>
-            <!-- <a href="https://mdbootstrap.com/docs/angular/getting-started/download/" class="btn btn-danger btn-md waves-effect waves-light" id="homepage-btn-getstart-angular" alt="Angular Getting Started">Getting Started<i class="fas fa-download ml-1"></i></a>
-            <a href="https://mdbootstrap.com/education/angular/" class="btn btn-danger btn-md waves-effect waves-light" id="homepage-btn-tutorial-angular" alt="Angular Tutorial">Tutorial</a>
-            <a href="https://mdbootstrap.com/docs/angular/" class="btn btn-danger btn-md waves-effect waves-light" id="homepage-btn-docs-angular" alt="Angular Docs">Docs</a>
-            <a href="https://mdbootstrap.com/products/angular-ui-kit/" class="btn btn-danger btn-md waves-effect waves-light" id="homepage-btn-pro-angular" alt="Angular Pro">Pro<i class="far far fa-gem ml-1"></i></a> -->
+          </div>
+          <!--Grid column-->
 
+        </div>
+
+        <hr class="my-3">
+
+
+        <!--Grid row-->
+        <div class="row wow fadeIn mt-4" data-wow-delay="0.3s" style="visibility: visible; animation-name: fadeIn; animation-delay: 0.3s;">
+
+          <!--Grid column-->
+          <div class="col-md-6 mb-4">
+
+            <!--Featured image-->
+            <div class="view overlay rounded z-depth-2 mb-4">
+              <img src="./img/images/nurayn.png" class="img-fluid" alt="First sample image" height="515px">
+              <a href="./templates/nurayn/index.html" target="_blank">
+                <div class="mask rgba-white-slight waves-effect waves-light" id="homepage-img-uikit-jquery" alt="jQuery UI Kit"></div>
+              </a>
+            </div>
+
+            <!--Excerpt-->
+            <h4 class="mb-3 font-weight-bold dark-grey-text">
+              <strong>Nurayn Nigeria
+              </strong>
+            </h4>
+            <p class="dark-grey-text">
+              Built with: <strong>W3.css, Html, css, javascript</strong>
+            </p>
+          </div>
+          <!--Grid column-->
+
+          <!--Grid column-->
+          <div class="col-md-6 mb-4">
+
+            <!--Featured image-->
+            <div class="view overlay rounded z-depth-2 mb-4">
+              <img src="./img/images/portfoli.png" class="img-fluid" alt="Second sample image" height="515px">
+              <a href="https://portfolio.adescode.com" target="_blank">
+                <div id="homepage-img-uikit-angular" alt="AiA Portfolio" class="mask rgba-white-slight waves-effect waves-light"></div>
+              </a>
+            </div>
+
+            <!--Excerpt-->
+            <h4 class="mb-3 font-weight-bold dark-grey-text">
+              <strong>AiA Portfolio</strong>
+            </h4>
+            <p class="dark-grey-text">Built with:
+              <strong>Html, css, javascript</strong>
+            </p>
           </div>
           <!--Grid column-->
 
